# 01-simple-llm-app-v1

./: 002-simpleTranslatorBuiltInSpanish.py  pyproject.toml  zzz-nb001-simple-llm-app.ipynb
